# project

./: .env  database.py  main.py  pyproject.toml
auth/: base_config.py
pages/: router.py
products/: models.py  router.py  schemas.py
static/: styles.css
templates/: about.html  base.html  contacts.html  index.html  login.html  products.html  register.html  search.html
